fixed letter spacing

--- a/src/styles/components/pages/Dashboard/Overview.module.scss
+++ b/src/styles/components/pages/Dashboard/Overview.module.scss
@@ -13,7 +13,7 @@
 		}
 		time {
 			font-size: $size-500;
-			letter-spacing: 0.15px;
+			letter-spacing: 0.5px;
 		}
 	}
 	.main {
